[gd_scene load_steps=3 format=3 uid="uid://cvryvyhhib4t3"]

[ext_resource type="Script" path="res://Menu_Screen/Start_Menu.gd" id="1_ovqlk"]
[ext_resource type="Texture2D" uid="uid://q1yw3g77dmp4" path="res://Image_Assets/MainMenu_Img.png" id="2_wsui6"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovqlk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_wsui6")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 200.0
offset_right = 180.0
offset_bottom = 348.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 108
text = "PAC3D"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Play_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "PLAY !"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
